Use Java 17 `toList` method.
Test: atest ArtServiceTests
Change-Id: I33655cd8da459e60f2d119d801560ba61659d179